--- a/views/layout.html
+++ b/views/layout.html
@@ -62,7 +62,7 @@
         .xterm .composition-view {
             /* TODO: Composition position got messed up somewhere */
             background: #000;
-            color: #FFF;
+            color: rgb(21, 244, 55);
             display: none;
             position: absolute;
             white-space: nowrap;
